--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
           <div class="col-lg-8 mx-auto text-center">
             <h2 class="section-heading">Welcome to my website!</h2>
             <hr class="light my-4">
-            <p class="text-faded mb-4">Hello,
+            <p class="text-faded mb-4">Hi,
             <br> I am a second year at Wellesley College, studying Economics and Computer Science. My interests are in cyber security and criminal justice. </p>
           </div>
         </div>
